--- a/src/main/resources/templates/setprofile.html
+++ b/src/main/resources/templates/setprofile.html
@@ -1,97 +1,82 @@
-<!DOCTYPE html>
-<html layout:decorate="~{layout}" xmlns="http://www.w3.org/1999/html">
-<div layout:fragment="content">
-    <div class="mt-4">
-        <div class="container">
-            <div class="col-12">
-                <div class="row justify-content-md-center">
-                    <div class="col-9">
-                        <div class="row">
-                            <div class="card">
-                                <div class="d-flex justify-content-center mt-4">
-                                    <div class="rounded-circle overflow-hidden d-flex justify-content-center align-items-center profile-profile-photo">
-                                        <!-- 프로필 사진 -->
-                                        <img th:src="@{/img/basic-profile-image.png}"
-                                             style="transform: scale(1.5); width: 100%; position: absolute; left: 0"/>
-                                    </div>
-                                    <div class="d-flex flex-column ms-4">
-                                        <span class="fs-5">사용자1</span>
-                                        <a class="text-decoration-none fw-bold fs-6" href="#">프로필 사진 바꾸기</a>
-                                    </div>
-                                </div>
-                                <!-- 개인정보 변경 시작 -->
-                                <div class="mt-3 line_set d-flex align-items-center">
-                                    <strong>이름</strong>
-                                    <div class="col-lg-6">
-                                        <input class="txtbox form-control" type="text" name="username"
-                                               placeholder="변경할 이름을 입력해주세요">
-                                    </div>
-                                </div>
-                                <div class="mt-3 line_set">
-                                <span class="txtsize">사람들이 이름, 별명 또는 비즈니스 이름 등 회원님의 알려진 이름을 사용하여
-                                회원님의 계정을 찾을수 있도록 도와주세요.</span>
-                                </div>
-                                <div class="mt-3 line_set d-flex align-items-center">
-                                    <strong>사용자 이름</strong>
-                                    <div class="col-lg-6">
-                                        <input class="txtbox form-control" type="text" name="nickname"
-                                               placeholder="변경할 사용자 이름을 입력해주세요.">
-                                    </div>
-                                </div>
-                                <div class="mt-3 line_set">
-                                    <strong>소개</strong>
-                                    <div class="col-lg-6">
-                                    <textarea class="txtbox form-control" rows="2" type="text" name="introduce"
-                                              placeholder="소개란을 입력해주세요.">
-                                    </textarea>
-                                    </div>
-                                </div>
-                                <div>
-                                    <div class="mt-4 me-1 d-flex justify-content-center">
-                                        <strong class="text-muted">개인정보</strong>
-                                    </div>
-                                    <div class="line_set">
-                                <span class="txtsize">비즈니스나 반려동물 등에 사용된 계정인 경우에도 회원님의
-                                개인 정보를 입력하세요. 공개프로필에 포함되지 않습니다.</span>
-                                    </div>
-                                </div>
-                                <div class="mt-3 line_set d-flex align-items-center">
-                                    <strong>이메일</strong>
-                                    <div class="col-lg-6">
-                                        <input class="txtbox form-control" type="text" name="email"
-                                               placeholder="변경할 수 없습니다.">
-                                    </div>
-                                </div>
-                                <div class="mt-3 line_set d-flex align-items-center">
-                                    <strong>전화번호</strong>
-                                    <div class="col-lg-6">
-                                        <input class="txtbox form-control" type="text" name="email"
-                                               placeholder="전화번호를 입력해주세요.">
-                                    </div>
-                                </div>
-                                <div class="mt-3 line_set d-flex align-items-center">
-                                    <strong>성별</strong>
-                                    <div class="col-lg-6">
-                                        <select class="txtbox form-control text-muted">
-                                            <option value="">선택하세요.</option>
-                                            <option value="">남성</option>
-                                            <option value="">여성</option>
-                                            <option value="">밝히고 싶지 않음</option>
-                                        </select>
-                                    </div>
-                                </div>
-                                <div class="radious my-5 d-flex justify-content-center">
-                                    <button type="button" class="btn btn-primary">제출</button>
-                                </div>
-                            </div>
-                        </div>
+<nav th:fragment="navbarFragment">
+    <!-- 상단 네비바 내용물 관련 -->
+    <div>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container justify-content-center">
+                <div class="d-flex flex-row justify-content-between align-items-center col-9">
+                    <!-- InstaKG 로고 들어갈 부분 조절 가능-->
+                    <a class="navbar-brand" th:href="@{/board/list}">InstaKG
+                        <!-- <img th:src="@{img/MainLogo2.png}" alt="InstaKG" loading="lazy"> -->
+                    </a>
+                    <div>
+                        <!-- 검색 -->
+                        <form class="d-flex">
+                            <input class="form-control me-2" type="search" placeholder="search" aria-label="search">
+                        </form>
+                    </div>
+                    <div class="d-flex flex-row">
+                        <!-- 아이콘 리스트 -->
+                        <ui class="list-inline m-0">
+                            <!-- 게시물 생성 아이콘  -->
+                            <li class="list-inline-item">
+                                <a th:href="@{/board/create}" class="link-dark">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                         fill="currentColor"
+                                         class="bi bi-plus-square" viewBox="0 0 16 16">
+                                        <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+                                        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+                                    </svg>
+                                </a>
+                            </li>
+                            <!-- 집(홈) 아이콘-->
+                            <li class="list-inline-item">
+                                <a th:href="@{/board/list}" class="link-dark">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="1.5rem" height="1.5em"
+                                         fill="currentColor"
+                                         class="bi bi-house-door-fill" viewBox="0 0 16 16">
+                                        <path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5z"/>
+                                    </svg>
+                                </a>
+                            </li>
+
+                            <!-- DM 아이콘 -->
+                            <li class="list-inline-item ms-2">
+                                <a href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQbnSIr-n5A6fu21xtFbOUzRTb_cRg-QxeythzCivhI_Q&s" class="link-dark">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="1.5rem" height="1.5em"
+                                         fill="currentColor"
+                                         class="bi bi-send" viewBox="0 0 16 16">
+                                        <path d="M15.854.146a.5.5 0 0 1 .11.54l-5.819 14.547a.75.75 0 0 1-1.329.124l-3.178-4.995L.643 7.184a.75.75 0 0 1 .124-1.33L15.314.037a.5.5 0 0 1 .54.11ZM6.636 10.07l2.761 4.338L14.13 2.576 6.636 10.07Zm6.787-8.201L1.591 6.602l4.339 2.76 7.494-7.493Z"/>
+                                    </svg>
+                                </a>
+                            </li>
+                            <!-- 나침반 아이콘 -->
+                            <li class="list-inline-item ms-2">
+                                <a href="https://www.youtube.com/watch?v=OSyDQ2aTOgA" class="link-dark">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="1.5rem" height="1.5em"
+                                         fill="currentColor"
+                                         class="bi bi-compass" viewBox="0 0 16 16">
+                                        <path d="M8 16.016a7.5 7.5 0 0 0 1.962-14.74A1 1 0 0 0 9 0H7a1 1 0 0 0-.962 1.276A7.5 7.5 0 0 0 8 16.016zm6.5-7.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
+                                        <path d="m6.94 7.44 4.95-2.83-2.83 4.95-4.949 2.83 2.828-4.95z"/>
+                                    </svg>
+                                </a>
+                            </li>
+                            <!-- 사람 아이콘-->
+                            <li class="list-inline-item ms-2">
+                                <a th:href="@{/user/profile}" class="link-dark">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="1.5rem" height="1.5em"
+                                         fill="currentColor"
+                                         class="bi bi-person-circle" viewBox="0 0 16 16">
+                                        <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                                        <path fill-rule="evenodd"
+                                              d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ui>
                     </div>
                 </div>
             </div>
-        </div>
+        </nav>
     </div>
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-            crossorigin="anonymous"></script>
-</html>
+    <!-- 상단바 네비바 내용물 관련 끝 -->
+</nav>
