--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -99,7 +99,7 @@
                                                     <div th:if="${board.replyLike}">
                                                         <button type="button"
                                                                 th:onclick="'javascript:like('+${board.id}+')'"
-                                                                class="btn p-0 heart-click">
+                                                                class="btn p-0">
                                                             <div th:id="'like'+${board.id}">
                                                                 <svg type="submit" xmlns="http://www.w3.org/2000/svg"
                                                                      width="1.5em"
@@ -114,7 +114,7 @@
                                                     <div th:if="!${board.replyLike}">
                                                         <button type="button"
                                                                 th:onclick="'javascript:like('+${board.id}+')'"
-                                                                class="btn p-0 heart-click">
+                                                                class="btn p-0">
                                                             <div th:id="'like'+${board.id}">
                                                                 <svg type="submit" xmlns="http://www.w3.org/2000/svg"
                                                                      width="1.5em"
@@ -191,10 +191,12 @@
                                                         <spanp class="text-muted"
                                                                th:text="${answer.content}"></spanp>
                                                     </div>
-                                                    <form th:action="@{|/answer/list/like/${answer.id}|}"
-                                                          method="post">
-                                                        <div th:if="${answer.replyLike}">
-                                                            <button type="button" th:onclick="'javascript:commentLike('+${answer.id}+')'" class="btn pr-5 pb-0 pt-0 m-0">
+
+                                                    <div th:if="${answer.replyLike}">
+                                                        <button type="button"
+                                                                th:onclick="'javascript:commentLike('+${answer.id}+')'"
+                                                                class="btn pr-5 pb-0 pt-0 m-0 star-fill">
+                                                            <div th:id="'commentLike'+${answer.id}">
                                                                 <svg type="submit"
                                                                      xmlns="http://www.w3.org/2000/svg"
                                                                      width="1em"
@@ -203,10 +205,14 @@
                                                                      viewBox="0 0 16 16">
                                                                     <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
                                                                 </svg>
-                                                            </button>
-                                                        </div>
-                                                        <div th:if="!${answer.replyLike}">
-                                                            <button type="button" th:onclick="'javascript:commentLike('+${answer.id}+')'" class="btn pr-5 pb-0 pt-0 m-0">
+                                                            </div>
+                                                        </button>
+                                                    </div>
+                                                    <div th:if="!${answer.replyLike}">
+                                                        <button type="button"
+                                                                th:onclick="'javascript:commentLike('+${answer.id}+')'"
+                                                                class="btn pr-5 pb-0 pt-0 m-0 star">
+                                                            <div th:id="'commentLike'+${answer.id}">
                                                                 <svg type="submit"
                                                                      xmlns="http://www.w3.org/2000/svg"
                                                                      width="1em"
@@ -215,9 +221,9 @@
                                                                      viewBox="0 0 16 16">
                                                                     <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z"/>
                                                                 </svg>
-                                                            </button>
-                                                        </div>
-                                                    </form>
+                                                            </div>
+                                                        </button>
+                                                    </div>
                                                 </div>
                                             </spanp>
                                         </div>
@@ -603,12 +609,15 @@ function commentLike(id){
     })
     .done(function (fragment){
         if(fragment == 1){
-
+            $('#commentLike'+id).html('<svg type="submit" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16"> <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/> </svg>');
         }else{
-
+            $('#commentLike'+id).html('<svg type="submit" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" class="bi bi-star" viewBox="0 0 16 16"> <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z"/> </svg>');
         }
     });
 }
+
+
+
 
 </script>
 </html>
